# scripts

./: README.md  datetime-rename  mp3-join  pyproject.toml  setup.py  tree-file-count
patzm/scripts/: date_rename.py  mp3.py  scdl.py  sync_firefox_dictionary.py  tree_file_count.py
